# byond-get

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: args.rs  main.rs
gentestdata/: Cargo.toml
gentestdata/src/: main.rs
src/: download.rs  error.rs  lib.rs  os.rs
tests/: verify_files.rs
tests/linux/: 514.1589.txt  515.1647.txt  516.1648.txt
tests/windows/: 514.1589.txt  515.1647.txt  516.1648.txt
