[package]
name = "byond-get"
version = "0.3.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "Zlib"

[[test]]
name = "verify_files"
harness = false

[dependencies]
# partialzip already uses curl, so let's minimize the total dependencies
curl = "0.4"
partialzip = "5"
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
datatest-stable = "0.3"
glob = "0.3"
tempfile = "3"

[features]
default = ["static-curl"]
static-curl = ["curl/static-curl", "curl/static-ssl"]

[workspace]
members = [".", "gentestdata"]
default-members = ["."]
